<resources>
    <string name="app_name">MyBets</string>

    <string name="icon_facebook_desc">Facebook</string>
    <string name="boton_login_text">Iniciar sesión con tu cuenta</string>
    <string name="boton_crear_cuenta_text">Crear una cuenta</string>
    <string name="boton_login_facebook_text">Iniciar sesión con Facebook</string>
    <string name="boton_login_correo_text">Iniciar sesión con Correo</string>
    <string name="edittext_email_hint">Email</string>
    <string name="edittext_password_hint">Contraseña</string>
    <string name="buscar_amigos_text">Buscar amigos</string>
    <string name="action_settings">Settings</string>
    <string name="text_amigos_nombre_placeholder">Nombre</string>
    <string name="text_amigos_estado_placeholder">Estado</string>
    <string name="text_amigos_añadidos_recientemente">Añadidos recientemente</string>
    <string name="text_placeholder_puntos">0 puntos</string>

    <string name="title_tab_amigos">AMIGOS</string>
    <string name="title_tab_apuestas">APUESTAS</string>
    <string name="boton_categorias_text">CATEGORÍAS</string>
    <string name="boton_populares_text">POPULARES</string>
    <string name="boton_futbol_text">FUTBOL</string>
    <string name="text_apuestas_hoy">Hoy</string>
    <string name="text_apuestas_mas">MAS</string>
    <string name="partida_item_icono_placeholder_desc">Icono del juego</string>
    <string name="apuesta_boton_juega_ya_text">¡Juega ya!</string>
    <string name="apuestas_bote_placeholder_text">Bote: 20.000 puntos</string>
    <string name="apuestas_titulo_placeholder_text">Balón de oro 2016</string>
    <string name="apuestas_numpersonas_placeholder_text">2.087.084</string>
    <string name="apuestas_countdown_placeholder_text">10 : 08 : 12</string>
    <string name="apuestas_fecha_fin_placeholder_text">Fin 12/10/16 – 08:00</string>

    <string name="text_cuadro_busqueda_hint">Buscar</string>
    <string name="text_search_hint">Buscar</string>
    <string name="text_search_text">Buscar</string>
    <string name="text_icono_equipo_1_desc">Icono del equipo 1</string>
    <string name="text_icono_equipo_2_desc">Icono del equpio 2</string>
    <string name="partida_item_icono_numpersonas_desc">Icono numero de personas</string>
    <string name="partida_item_icono_reloj_desc">Icono reloj</string>
    <string name="partida_item_text_apuesta_rechazada">Apuesta rechazada</string>
    <string name="partida_item_text_apuesta_esperando_resultados">Esperando resultados</string>
    <string name="partida_view_bote_text">Bote: {0} puntos</string>
    <string name="partida_view_formato_fecha_fin">dd/MM/yy - HH:mm</string>
    <string name="partida_view_formato_contador">HH : mm : ss</string>
    <string name="partida_veiw_texto_fecha_fin">Fin {0}</string>
    <string name="dialog_juega_ya_text_apostar">Apostar</string>
    <string name="dialog_juega_ya_text_buscar_oponente">Buscar\noponente</string>
    <string name="dialog_juega_ya_icon_desc">Icono del tipo de partida</string>
    <string name="dialog_juega_ya_bote_format">Bote: {0} puntos</string>
    <string name="mi_perfil_fondo_desc">Fondo mi perfil</string>
    <string name="mi_perfil_icon_editar_desc">Icono editar</string>
    <string name="mi_perfil_icon_cerrar_desc">Icono cerrar</string>
    <string name="editar_perfil_text_titulo">Editar perfil</string>
    <string name="action_title_configuracion">Configuración</string>
    <string name="action_text_perfil">Perfil</string>
    <string name="action_text_cerrar_sesion">Cerrar sesión</string>
    <string name="mi_perfil_formato_puntos">{0} puntos</string>
    <string name="apostar1x2_icon_equipo1_desc">Icono del equpo local</string>
    <string name="mi_perfil_formato_puntos_historial_ganados">+{0} puntos</string>
    <string name="mi_perfil_formato_puntos_historial_perdidos">{0} puntos</string>
    <string name="mi_perfil_text_label_puntos_ganados">"Ganados "</string>
    <string name="mi_perfil_text_label_puntos_perdidos">"Perdidos "</string>
    <string name="mi_perfil_formato_fecha_entrada_historial">dd/MM/yyyy</string>
    <string name="perfil_format_puntos">{0} puntos</string>
    <string name="editar_perfil_boton_cerrar_ventana_desc">Boton cerrar la ventana</string>
    <string name="title_tab_mis_apuestas">MIS APUESTAS</string>
    <string name="partida_item_text_fin_apuesta">Fin de la apuesta</string>
    <string name="partida_item_format_puntos_ganados">Ganas {0} puntos</string>
    <string name="pantalla_historial_jornada_format_fecha">dd/MM/yyyy</string>
    <string name="pantalla_historial_jornada_format_puntos">{0} puntos</string>
    <string name="historial_jornada_label_fecha">Fecha</string>
    <string name="historial_jornada_label_bote">Puntos en el bote</string>
    <string name="historial_jornada_icon_cerrar_desc">Icono cerra ventana</string>
    <string name="historial_jornada_icon_cabecera_desc">Icono tipo de juego</string>
    <string name="partida_text_action_editar_nombre">Editar nombre</string>
    <string name="partida_text_action_rechazar_partida">Rechazar</string>
    <string name="clasificacion_en_partida_label_fecha">Fecha</string>
    <string name="clasificacion_en_partida_label_bote">Puntos bote</string>
    <string name="clasificacion_en_partida_icon_cerrar_desc">Boton cerrar ventana</string>
    <string name="clasificacion_en_partida_icon_cabecera_desc">Icono tipo partida</string>
    <string name="entrada_clasificacion_format_puntos">{0} puntos</string>
    <string name="ficha_clasificacion_format_bote">{0} puntos</string>
    <string name="item_categoria_icon_desc">Icono categoria</string>
    <string name="pantalla_categorias_text_titulo">Categorías</string>
    <string name="pantalla_categoria_populares_titulo">Populares</string>
    <string name="pantalla_partidas_futbol_titulo">Futbol</string>
    <string name="fragment_muro_formato_text_1">{0} acaba de conseguir</string>
    <string name="fragment_muro_format_text_2">"+{0} puntos en "</string>
    <string name="fragment_muro_titulo">MURO</string>
    <string name="pantalla_invitar_amigo_text_contexctarse_facebook">Conectarme a Facebook</string>
    <string name="pantalla_invitar_amigo_text_boton_aceptar">Aceptar</string>
    <string name="pantalla_configuracion_title">Configuración</string>
    <string name="fragment_formulario_login_text_boton_log_in">Log in</string>
    <string name="pantalla_principal_fragment_apuestas_icon_cabecera_desc">Imagen cabecera LaLiga</string>
    <string name="partida_text_ver_clasificacion">Ver clasificación</string>
</resources>
