<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/partida_item_fondo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerVertical="true"
    android:background="@drawable/mybets_fondo_juego">


    <RelativeLayout
        android:id="@+id/partida_item_fondo_icon"
        android:layout_width="44dp"
        android:layout_height="match_parent"
        android:background="@drawable/mybets_fondo_partida">

        <ImageView
            android:id="@+id/partida_item_boton_acciones"
            android:layout_width="4dp"
            android:layout_height="16dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:src="@drawable/mybets_tres_puntos" />

        <ImageView
            android:id="@+id/partida_item_icon_placeholder"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/partida_item_icono_placeholder_desc"
            android:src="@drawable/mybets_icon_sobre" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/partida_item_fondo_icon">

        <TextView
            android:id="@+id/partida_item_boton_juega_ya"
            style="@style/MyBetsBotonTextoAmarillo"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="5dp"
            android:text="@string/apuesta_boton_juega_ya_text"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/partida_item_text_apuesta_rechazada"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/partida_item_text_apuesta_rechazada"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <TextView
            android:id="@+id/partida_item_text_apuesta_esperando_resultados"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/partida_item_text_apuesta_esperando_resultados"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <TextView
            android:id="@+id/partida_item_text_apuesta_ganada"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/partida_item_text_apuesta_esperando_resultados"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/partida_item_icono_persona"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/partida_item_icono_numpersonas_desc"
            android:src="@drawable/mybets_icon_personas" />

        <TextView
            android:id="@+id/partida_item_text_num_personas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@id/partida_item_icono_persona"
            android:text="@string/apuestas_numpersonas_placeholder_text"
            android:textColor="@color/gris_medio"
            android:textSize="12sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/partida_item_text_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/apuestas_titulo_placeholder_text"
            android:textColor="@color/gris_oscuro"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/partida_item_icon_reloj"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_below="@id/partida_item_text_titulo"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/partida_item_icono_reloj_desc"
            android:src="@drawable/mybets_icon_reloj"
            android:visibility="gone" />

        <TextView
            android:id="@+id/partida_item_text_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/partida_item_text_titulo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/partida_item_icon_reloj"
            android:fontFamily="sans-serif"
            android:text="@string/apuestas_countdown_placeholder_text"
            android:textColor="@color/timer_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/partida_item_text_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/partida_item_text_titulo"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/partida_item_icon_reloj"
            android:fontFamily="sans-serif"
            android:text="@string/apuestas_fecha_fin_placeholder_text"
            android:textColor="@color/timer_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/partida_item_text_bote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/apuestas_bote_placeholder_text"
            android:textColor="@color/gris_medio_oscuro"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:id="@+id/partida_item_popup_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_toRightOf="@id/partida_item_fondo_icon"
        android:layout_alignParentTop="true" />

</RelativeLayout>
