<RelativeLayout android:id="@+id/plantilla_fragment_opciones_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".vistas.pantallas.iniciarSesion.fragments.IniciarSesionFragmentOpcionesLogin">


    <TextView android:id="@+id/boton_login_text"
        style="@style/MyBetsTextAreaClickable"
        android:layout_marginTop="20dp"
        android:onClick="clickLoginText"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:text="@string/boton_login_text"
        android:textSize="15sp"
        android:longClickable="true"/>

    <RelativeLayout android:id="@+id/boton_login_fb"
        android:layout_below="@id/boton_login_text"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/boton_login_anchura"
        android:layout_height="@dimen/boton_login_altura">

        <ImageView

            android:layout_width="@dimen/boton_login_anchura"
            android:layout_height="@dimen/boton_login_altura"
            android:src="@drawable/mybets_boton_login_azul"
            android:contentDescription="@string/boton_login_facebook_text" />
        <ImageView
            android:layout_marginLeft="23dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/icon_fb_anchura"
            android:layout_height="@dimen/icon_fb_altura"
            android:src="@drawable/mybets_icon_facebook"
            android:contentDescription="@string/icon_facebook_desc" />

        <TextView
            style="@style/MyBetsTextArea"
            android:text="@string/boton_login_facebook_text"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp"/>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/boton_login_mail"
        android:layout_below="@id/boton_login_fb"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/boton_login_anchura"
        android:layout_height="@dimen/boton_login_altura">

        <ImageView

            android:layout_width="@dimen/boton_login_anchura"
            android:layout_height="@dimen/boton_login_altura"
            android:src="@drawable/mybets_boton_login_naranja" />
        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/icon_mail_anchura"
            android:layout_height="@dimen/icon_mail_altura"
            android:src="@drawable/mybets_icon_mail"
            android:contentDescription="@string/icon_facebook_desc" />

        <TextView
            style="@style/MyBetsTextArea"
            android:text="@string/boton_login_correo_text"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp"/>



    </RelativeLayout>

    <TextView android:id="@+id/boton_registro"
        style="@style/MyBetsTextAreaClickable"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/boton_login_mail"
        android:text="@string/boton_crear_cuenta_text"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:onClick="clickRegisterText"/>





</RelativeLayout>
